# Frontier-Indexer

./: Cargo.toml  Dockerfile  README.md
docs/developers/: architecture.md  parsing-move-objects.md
docs/users/: configuration.md
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2026-04-05-155256-0000_characters/: down.sql  up.sql
migrations/2026-04-07-173125-0000_events_character_created/: down.sql  up.sql
migrations/2026-04-08-040739-0000_owner_caps/: down.sql  up.sql
migrations/2026-04-08-092749-0000_events_owner_cap_created/: up.sql
migrations/2026-04-08-092808-0000_events_owner_cap_transferred/: down.sql  up.sql
migrations/2026-04-08-180836-0000_assemblies/: down.sql  up.sql
migrations/2026-04-09-055842-0000_events_status_changed/: down.sql  up.sql
migrations/2026-04-09-064151-0000_events_location_revealed/: down.sql  up.sql
migrations/2026-04-09-064529-0000_events_assembly_created/: down.sql  up.sql
migrations/2026-04-10-073046-0000_system_table_registry/: down.sql  up.sql
migrations/2026-04-11-141833-0000_events_energy_production_started/: down.sql  up.sql
migrations/2026-04-11-205027-0000_events_energy_production_stopped/: down.sql  up.sql
migrations/2026-04-12-074029-0000_events_energy_released/: down.sql  up.sql
migrations/2026-04-12-110902-0000_events_fuel_efficiency_set/: down.sql  up.sql
migrations/2026-04-12-142929-0000_events_fuel_burning_started/: down.sql  up.sql
migrations/2026-04-12-142941-0000_events_fuel_burning_stopped/: down.sql  up.sql
migrations/2026-04-12-142946-0000_events_fuel_burning_updated/: up.sql
migrations/2026-04-12-142957-0000_events_fuel_deleted/: down.sql  up.sql
migrations/2026-04-12-143014-0000_events_fuel_withdrawn/: down.sql  up.sql
migrations/2026-04-13-060026-0000_killmails/: up.sql
migrations/2026-04-13-103347-0000_events_turret_created/: down.sql  up.sql
migrations/2026-04-13-110336-0000_turrets/: down.sql  up.sql
migrations/2026-04-14-071724-0000_network_nodes/: down.sql  up.sql
migrations/2026-04-14-094837-0000_events_network_node_created/: down.sql  up.sql
migrations/2026-04-14-115927-0000_events_gate_created/: down.sql  up.sql
migrations/2026-04-14-130222-0000_events_gate_jumped/: down.sql  up.sql
migrations/2026-04-14-140235-0000_events_gate_permit_issued/: down.sql  up.sql
migrations/2026-04-14-152320-0000_gates/: down.sql  up.sql
migrations/2026-04-14-211020-0000_events_item_minted/: down.sql  up.sql
migrations/2026-04-14-211025-0000_events_item_deposited/: down.sql  up.sql
migrations/2026-04-14-211034-0000_events_item_withdrawn/: down.sql  up.sql
migrations/2026-04-14-211041-0000_events_item_destroyed/: down.sql  up.sql
migrations/2026-04-15-054614-0000_events_storage_unit_created/: down.sql  up.sql
migrations/2026-04-15-121222-0000_inventories/: down.sql  up.sql
migrations/2026-04-15-123739-0000_inventory_entries/: up.sql
migrations/2026-04-15-123744-0000_items/: down.sql  up.sql
src/: config.rs  lib.rs  main.rs  sandbox.rs  schema.rs
src/handlers/: mod.rs  world.rs
src/handlers/world/: access.rs  assemblies.rs  characters.rs  killmails.rs  primitives.rs
src/handlers/world/access/: owner_cap_created_handler.rs  (+2 more)
src/models/: mod.rs  sui.rs  system.rs  world.rs
src/models/system/: fuel_registry.rs  table_registry.rs
src/models/world/: access.rs  assemblies.rs  killmails.rs  primitives.rs
(+114 files in other folders)
